@@ -2,8 +2,8 @@
 ]>
 <book>
 	<bookinfo>
-		<date>$Date: 2002/10/18 09:34:05 $</date>
-		<releaseinfo>$Revision: 1.39 $</releaseinfo>
+		<date>$Date: 2002/10/18 12:59:58 $</date>
+		<releaseinfo>$Revision: 1.40 $</releaseinfo>
 		<title><productname>FreeTDS</productname> User Guide</title>
 		<subtitle>A Guide to Installing, Configuring and Running <productname>FreeTDS</productname></subtitle>
 		<author>
@@ -46,9 +46,9 @@ This guide is here for you, and we hope that you will be here for it, that other
 			<para>
 A few technical notes.  This guide is written in SGML DocBook format, specifications for which are found in the <ulink url="http://www.docbook.org/tdg/en/html/docbook.html">DocBook book</ulink>.  It was converted to HTML with <ulink url="http://openjade.sourceforge.net">OpenJade</ulink>.  
 The document you are reading is version 
-$Revision: 1.39 $
+$Revision: 1.40 $
 , dated 
-$Date: 2002/10/18 09:34:05 $ (CVS control number $Id: userguide.sgml,v 1.39 2002/10/18 09:34:05 freddy77 Exp $).  The most recent version can be found on the <productname>FreeTDS</productname> 
+$Date: 2002/10/18 12:59:58 $ (CVS control number $Id: userguide.sgml,v 1.40 2002/10/18 12:59:58 freddy77 Exp $).  The most recent version can be found on the <productname>FreeTDS</productname> 
 <ulink url="http://www.freetds.org/userguide/">web site</ulink>, where you will also find the most up to date <ulink url="http://www.freetds.org/faq.html">FAQ</ulink>, as well as links to the anonymous and browseable CVS tree.  The SGML text is distributed with the rest of the source code, and may be edited with your favorite or least favorite text editor.  
 			</para>
 			<para> 
@@ -1908,6 +1908,19 @@ can be stored in odbc.ini. To support this method some options has been added.
 	<entry>No</entry>
 	<entry>Use trusted connection (mssql domain authentication). Work in progress: not supported, use UID=domain\user</entry>
 	<entry>Yes or No</entry>
+	</row>
+	<row>
+	<entry>WSID</entry>
+	<entry>Computer name</entry>
+	<entry>Can be specified only in dsnless connection. Name of the computer sended to server.</entry>
+	<entry>Any</entry>
+	</row>
+	<row>
+	<entry>LANGUAGE</entry>
+	<entry>us_english</entry>
+	<entry>This can be specified only in dsnless connection. Language used by server. 
+		Work in progress: even in DSN connections.</entry>
+	<entry>Any</entry>
 	</row>
 </tbody>
 </tgroup>
